<resources>
    <string name="app_name">Ridertrack</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="email_action_sign_in">Login</string>
    <string name="facebook_action_sign_in">Login with Facebook</string>
    <string name="google_action_sign_in">Login with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_sign_in_first">UPS...couldn\'t sign in</string>
    <string name="error_sign_in_second">Your email and password don\'t match.\n Please, try again.</string>
    <string name="try_again">Try again</string>
    <string name="share">Share on Facebook</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="finish_line">Finish Line</string>
    <string name="time_default">00:00:00</string>
    <string name="speed_default">0,00</string>
    <string name="finish_line_default"> 0,00</string>
    <string name="speed_measure">" km/h"</string>
    <string name="finish_line_measure">" km"</string>
    <string name="facebook_app_id">278876872621248</string>
    <string name="fb_login_protocol_scheme">fb278876872621248</string>
    <string name="events_list">Your next events</string>
    <string name= "question_timeout">How often do you want to send your position? </string>
    <string name= "description_timeout">The less minutes pass between two consequent sendings, the most accurate your track will be</string>
    <string name="timeout_1">2 seconds</string>
    <string name="timeout_2">3 seconds</string>
    <string name="timeout_3">5 seconds</string>
    <string name="timeout_4">10 seconds</string>
    <string name="timeout_5">20 seconds</string>
    <string name="timeout_6">30 seconds</string>
    <string name="done">Set timeout</string>
    <string name="no_events">No events planned.\nLook for the next one!</string>
    <string name="go_website">List of events</string>
    <string name="error_expired">Your authorization is expired. Please, login again.</string>
    <string name="ok">OK</string>
    <string name="not_started">The event has not started yet</string>
    <string name="started">You\'re sending your position every %1$d seconds</string>
    <string name="click_event">Click on an event to start the tracking</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_client_id">920489632849-hppab7p06cavsr9jqrnvi6coho1l1hj0.apps.googleusercontent.com</string>
</resources>
