<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aquamarine">
<TextView
    android:id="@+id/status"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/not_started"
    android:textColor="@color/aquamarine"
    android:background="@color/acquamarine_light"
    android:gravity="center"
    android:textSize="20dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/time"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold|italic" />
    <Chronometer
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/time_default"
        android:textSize="50sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/speed"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
      <TextView
            android:id="@+id/speed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/speed_default"
            android:gravity="right"
            android:textSize="50sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/speed_measure"
            android:textSize="50sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/finish_line"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/finish_line"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="right"
        android:text="@string/finish_line_default"
        android:textSize="50sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/finish_line_measure"
            android:textSize="50sp"/>
</LinearLayout>
<ImageView
    android:id="@+id/facebook_sign_in_button"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:src="@drawable/facebook_button"
    android:layout_marginHorizontal="40dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="30dp"/>

</LinearLayout>