<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_red">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/question_timeout"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/description_timeout"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/pink"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/timeout_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/timeout_1"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/pink"
            android:textColor="@color/darker_red"/>
        <Button
            android:id="@+id/timeout_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/timeout_2"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@color/pink"
            android:textColor="@color/darker_red" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/timeout_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:text="@string/timeout_3"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:background="@color/pink"
            android:textColor="@color/darker_red"/>
        <Button
            android:id="@+id/timeout_10"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:text="@string/timeout_4"
            android:textSize="15sp"
            android:background="@color/pink"
            android:textColor="@color/darker_red"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/timeout_20"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:text="@string/timeout_5"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:background="@color/pink"
            android:textColor="@color/darker_red"/>
        <Button
            android:id="@+id/timeout_30"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:text="@string/timeout_6"
            android:textSize="15sp"
            android:background="@color/pink"
            android:textColor="@color/darker_red"/>
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:text="@string/done"
        android:textSize="15sp"
        android:background="@color/pink"
        android:textColor="@color/dark_red"/>
</LinearLayout>