<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.mobileapp.ridertrack.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/error"
        android:scaleType="fitCenter"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_sign_in_first"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_sign_in_second" />
    <Button
        android:id="@+id/try_again_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/try_again"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="20dip"
        android:textColor="@color/white"
        android:backgroundTint="@color/aquamarine"
        android:gravity="center"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="40dp"
        />
</LinearLayout>


</LinearLayout>
