<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.mobileapp.ridertrack.LoginActivity">
    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:text="@string/email_action_sign_in"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="20dip"
            android:textColor="@color/white"
            android:backgroundTint="@color/aquamarine"
        />

        <Button
            android:id="@+id/facebook_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:text="@string/facebook_action_sign_in"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:drawableStart="@drawable/facebook" />

        <Button
            android:id="@+id/google_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:text="@string/google_action_sign_in"
            android:drawableStart="@drawable/google"
        />

    </LinearLayout>
</LinearLayout>
